Added admin panel configs

--- a/advent/templates/layout.html
+++ b/advent/templates/layout.html
@@ -61,14 +61,14 @@
                 <div class="footlinks">
                     <h4>Connect</h4>
                     <div class="social">
-                        <a href="https://www.facebook.com/profile.php?id=100007787415175" target="_blank"><i
+                        <a href="#" target="_blank"><i
                                 class='bx bxl-facebook'></i></a>
-                        <a href="https://www.instagram.com/iamit010/" target="_blank"><i
+                        <a href="https://www.instagram.com/shivam_mhaske_?igsh=anNzaGsyZWd3ZTd1" target="_blank"><i
                                 class='bx bxl-instagram'></i></a>
-                        <a href="https://twitter.com/sarcasmit_" target="_blank"><i class='bx bxl-twitter'></i></a>
-                        <a href="https://www.linkedin.com/in/amit-kumar-singh-475b36212/" target="_blank"><i
+                        <a href="#" target="_blank"><i class='bx bxl-twitter'></i></a>
+                        <a href="https://www.linkedin.com/in/aniket-borhade-24a8a72b1/" target="_blank"><i
                                 class='bx bxl-linkedin'></i></a>
-                        <a href="https://github.com/iamit010" target="_blank"><i class='bx bxl-github'></i></a>
+                        <a href="https://github.com/Techyshiva" target="_blank"><i class='bx bxl-github'></i></a>
                     </div>
                 </div>
 
