--- a/advent/main/templates/booking.html
+++ b/advent/main/templates/booking.html
@@ -6,61 +6,74 @@
   <div class="booking">
         <h1>Booking Online Now</h1>
         <p>Please fill out this form with the required information</p>
-        <form action="">
+        <form method="POST" action="{% url 'booking' %}">
+            {% csrf_token %}
+
             <fieldset>
                 <label>First Name: *
-                    <input type="text" class="data" name="firstname" placeholder="Enter first name" required /></label>
+                    <input type="text" name="firstname" required>
+                </label>
+
                 <label>Last Name: *
-                    <input type="text" name="lastname" placeholder="Enter last name" required />
+                    <input type="text" name="lastname" required>
                 </label>
+
                 <label>Email: *
-                    <input type="email" name="email" placeholder="Enter Email" required />
+                    <input type="email" name="email" required>
                 </label>
+
                 <label>Phone Number: *
-                    <input type="text" name="phone" placeholder="Enter Phone number" required />
+                    <input type="text" name="phone" required>
                 </label>
 
                 <label>Check-in Date: *
-                    <input type="date" name="check-in-date" required />
+                    <input type="date" name="checkin" required>
                 </label>
+
                 <label>Check-out Date: *
-                    <input type="date" name="check-out-date" required />
+                    <input type="date" name="checkout" required>
                 </label>
             </fieldset>
+
             <fieldset>
-                <label> Accomodation Type: *
-                    <select name="accomodation" id="accomodation">
+                <label>Accommodation Type: *
+                    <select name="accommodation" required>
                         <option value="">Select One</option>
-                        <option value="1">Hotel</option>
-                        <option value="2">Self-Catered</option>
-                        <option value="3">Hostel</option>
-                        <option value="4">Guesthouse</option>
+                        <option value="Hotel">Hotel</option>
+                        <option value="Self-Catered">Self-Catered</option>
+                        <option value="Hostel">Hostel</option>
+                        <option value="Guesthouse">Guesthouse</option>
                     </select>
-                </label><br>
+                </label>
 
-                <label>Number of room: * <input type="number" name="age" min="1" max="120" class="room" /><br><br>
-                    <label>Room Type: * <br>
-                        <label>
-                            <input type="radio" name="room-type" class="inline" /> Single Room
-                        </label><br>
-                        <label>
-                            <input type="radio" name="room-type" class="inline" /> Double Room
-                        </label><br>
-                        <label>
-                            <input type="radio" name="room-type" class="inline" /> Triple Room
-                        </label><br>
-                        <label>
-                            <input type="radio" name="room-type" class="inline" /> Quad Bedroom
-                        </label>
-                    </label>
-                </label><br>
+                <label>Number of rooms:
+                    <input type="number" name="rooms" min="1">
+                </label>
 
-                <label>Additional Requests
-                    <textarea name="additional" rows="5" cols="30" placeholder="Your message ..."></textarea>
+                <label>Room Type:</label>
+
+                <label>
+                    <input type="radio" name="room_type" value="Single"> Single Room
+                </label>
+
+                <label>
+                    <input type="radio" name="room_type" value="Double"> Double Room
+                </label>
+
+                <label>
+                    <input type="radio" name="room_type" value="Triple"> Triple Room
+                </label>
+
+                <label>
+                    <input type="radio" name="room_type" value="Quad"> Quad Bedroom
+                </label>
+
+                <label>Additional Requests:
+                    <textarea name="additional"></textarea>
                 </label>
             </fieldset>
-            <input type="submit" value="Submit" ONCLICK="alert('Booked successfully! \nEnjoy your journey')" class="submit-btn" />
-           
+
+            <input type="submit" value="Submit" class="submit-btn">
         </form>
     </div>
 {% endblock %}
